# tcmalloc-rs

./: .gitmodules  .travis.yml  Cargo.toml  README.md  build.rs
examples/: Cargo.toml
examples/src/: main.rs
src/: lib.rs  tcmalloc.rs
tcmalloc-sys/: Cargo.toml  build.rs
