[package]
authors = ["Jean-Marie Comets <jean.marie.comets@gmail.com>"]
categories = ["allocators"]
description = "Drop-in global allocator using tcmalloc"
documentation = "https://docs.rs/tcmalloc"
keywords = ["allocator"]
license = "MIT/Apache-2.0"
name = "tcmalloc"
repository = "https://github.com/jmcomets/tcmalloc-rs"
version = "0.1.0"


[dependencies]
