[package]
name = "tcmalloc"
version = "0.1.0"
authors = ["Jean-Marie Comets <jean.marie.comets@gmail.com>"]
description = "Drop-in global allocator using tcmalloc"
license = "MIT/Apache-2.0"

repository = "https://github.com/jmcomets/tcmalloc-rs"
documentation = "https://docs.rs/tcmalloc"

keywords = ["allocator"]
categories = ["memory-management"]

[dependencies]
