[package]
name = "tcmalloc-sys"
version = "0.2.0"
authors = ["Jean-Marie Comets <jean.marie.comets@gmail.com>"]
description = "Drop-in global allocator using tcmalloc"
license = "MIT/Apache-2.0"
edition = "2018"
build = "build.rs"
links = "tcmalloc"

repository = "https://github.com/jmcomets/tcmalloc-rs"
documentation = "https://docs.rs/tcmalloc"

keywords = ["allocator"]
categories = ["memory-management"]

[lib]
test = false
doc-test = false
bench = false
